# SystemSoftware

./: CMakeLists.txt  Makefile  asembler  program.hex
inc/: LSection.hpp  LSymTable.hpp  LinkerSection.hpp  binding.hpp  codes.hpp  elf.hpp  int_util.hpp  lexer.hpp  parser.hpp  reg.hpp  section.hpp  symbol_table.hpp  table.hpp
misc/: Makefile  lexer.l  parser.hpp  parser.y  symbol tables
src/: LSection.cpp  LSymTable.cpp  LinkerSection.cpp  asembler.cpp  codes.cpp  elf.cpp  emulator.cpp  int_util.cpp  lexer.cpp  linker.cpp  main.cpp  parser.cpp  reg.cpp  section.cpp  symbol_table.cpp  table.cpp
tests/: out  test1.s  test1.txt  test2.s
tests/nivo-a/: program.hex
tests/nivo-b/: handler.s  program.hex
tests/nivo-c/: program.hex
